webserver/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

h1 {
    text-align: center;
}

body {
    padding: 2em;
}

.mainWrapper {
    display: flex;
    justify-content: center;
    margin-top: 1em;
}

.inputFields {
    width: 100%;
    max-width: 50em;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

label {
    margin-right: 0.5em;
}

input,
select {
    margin-bottom: 1em;
    width: 15em;
    padding: 0.4em;
    font-size: 1em;
}

button {
    margin-bottom: 5em;
    padding: 0.5em 1em;
    font-weight: bold;
    border: none;
    background: black;
    color: white;
    cursor: pointer;
}

#output {
    width: 100%;
    height: 20em;
    background: #ebebeb;
    border: 1px solid #707070;
    border-radius: 5px;
}

